# Aether-Wars

./: Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  package.json  tokenomics_audit.md  tsconfig.json  webpack.config.js
scripts/: build.sh
src/aether_frontend/public/: index.html
src/aether_frontend/src/: App.tsx
src/aether_frontend/src/contexts/: AuthContext.tsx  SessionContext.tsx
src/aether_frontend/src/features/home/: index.tsx
src/aether_frontend/src/layouts/: Header.tsx  MainLayout.tsx
src/aether_frontend/src/pages/: HomePage.tsx  Layout.jsx
src/aether_frontend/src/providers/: SessionProvider.tsx
src/aether_frontend/src/store/: rootReducer.ts
src/alex_backend/: Cargo.toml  alex_backend.did
src/alex_backend/src/: lib.rs
src/alex_backend/src/nft_manager/: init.rs  mod.rs  update.rs
src/alex_backend/src/realms/: mod.rs
src/alex_frontend/src/components/: Header.tsx
src/alex_frontend/src/contexts/: SessionContext.tsx
src/alex_frontend/src/providers/: SessionProvider.tsx
src/alex_frontend/src/store/: rootReducer.ts
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/nft_manager/: init.rs  mod.rs  query.rs  todo.md  types.rs  update.rs  utils.rs  wallets.rs
src/icp_swap/: Cargo.toml  icp_swap.did  icp_swap_prelim_audit.txt
src/icp_swap/src/: queries.rs  script.rs  storage.rs  update.rs  utils.rs
src/icrc7/: main.mo
src/tokenomics/: tokenomics.  tokenomics_audit.txt
src/tokenomics/src/: queries.rs  storage.rs  update.rs
src/tower_nft/initial_state/: icrc7.mo
(+27 files in other folders)
