[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.6"
candid = "0.10.7"
ciborium = "0.2.1"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.13.2"
icrc-ledger-types = "0.1.5"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7.0"
serde_json = "1.0"
ic-stable-structures = "0.6.1"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.2"
hex = "0.4.0"
num-traits = "0.2.19"
num-bigint = "0.4.4"